--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
@@ -21,5 +22,12 @@ dependencies {
     compile 'commons-configuration:commons-configuration:1.10'
     // Berkeley db
     compile files('libs/je-7.0.6.jar')
+
+    // libsodium wrapper
+    compile files('libs/kalium-0.4.0.jar')
+
+    // jnr-ffi is a java library for loading native libraries without writing JNI code by hand, or using tools such as SWIG.
+    compile group: 'com.github.jnr', name: 'jnr-ffi', version: '2.1.0'
+
 
 }
